# VitDaily

./: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tauri-study-guide.html
.github/: copilot-instructions.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  strategy.rs  types.rs
src/components/: Dashboard.tsx  Logs.tsx  PurchaseLogs.tsx  ScheduleForm.tsx  ScheduleList.tsx  Schedules.tsx  Settings.tsx  Strategies.tsx  Threads.tsx
src/types/: index.ts
src/utils/: copy.ts  logging.ts
