[package]
name = "vitdaily"
version = "0.1.0"
description = "Daily Bitcoin auto-purchase desktop app"
authors = ["youngin"]
edition = "2021"
default-run = "vitdaily"

[lib]
name = "vitdaily_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
jsonwebtoken = "9"
keyring = { version = "3", features = ["apple-native"] }
dirs = "6"
